robotic-codes/src/test/test_value.txt
test_value.cpp: In function ‘int main()’:
test_value.cpp:10:3: error: expected ‘;’ before ‘long’
   long int num;
   ^~~~
test_value.cpp:11:3: error: ‘num’ was not declared in this scope
   num = value(s);
   ^~~
test_value.cpp:11:3: note: suggested alternative: ‘enum’
   num = value(s);
   ^~~
   enum
test_value.cpp:11:9: error: ‘value’ was not declared in this scope
   num = value(s);
         ^~~~~
test_value.cpp:11:9: note: suggested alternative: ‘valloc’
   num = value(s);
         ^~~~~
         valloc
